resources/community-1.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphic-community-v10
spec:
  type: ClusterIP
  selector:
    app: morphic-community-v10
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
