resources/community-1.0/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community-v10
  annotations:
    kubernetes.io/ingress.class: external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # I have no idea what to set this to!
    nginx.ingress.kubernetes.io/limit-rps: "400"
spec:
  tls:
  - hosts:
    - dev-community.morphic.dev
    secretName: morphic-community-v10-tls
  rules:
  - host: dev-community.morphic.dev
    http:
      paths:
      - backend:
          serviceName: morphic-community-v10
          servicePort: http
        path: /
